# EFL

./: .gitignore  README.md  ROADMAP.md
.github/workflows/: release.yml  smoke.yml
devkit/: Cargo.toml
devkit/src/: app.rs  demo.rs  engine_state.rs  lib.rs  main.rs  settings.rs  state.rs  theme.rs
devkit/src/diagnostics/: codes.rs  collector.rs  severity.rs
devkit/src/pack/: builder.rs  inspector.rs  migration.rs  mod.rs  registry.rs  scaffold.rs  shared.rs  validator.rs  watcher.rs
devkit/src/pipe/: command_writer.rs  mod.rs
devkit/src/tabs/: creation_kit.rs  diagnostics.rs  mod.rs  packs.rs
docs/authoring/: content-types.md  examples.md  getting-started.md  manifest-reference.md  triggers-and-conditions.md
docs/devkit/: devkit-guide.md  diagnostic-codes.md  tui-guide.md  v2.5-execution-spec.md
docs/internals/: architecture.md  engine-bridge.md  ipc-protocol.md  save-format.md
docs/player/: installing-content-packs.md
docs/superpowers/specs/: 2026-03-17-project-skeleton-design.md
engine/: CMakeLists.txt
engine/include/efl/: efl.h
engine/include/efl/areas/: HijackedRoomBackend.h  IRoomBackend.h  NativeRoomBackend.h
engine/include/efl/bridge/: hooks.h  instance_walker.h  room_tracker.h  routine_invoker.h  sdk_compat.h
engine/include/efl/core/: bootstrap.h  compatibility_service.h  config_service.h  diagnostics.h  efpack_loader.h  event_bus.h  hot_reload.h  log_service.h  manifest.h  registry_service.h  save_service.h  trigger_service.h
engine/include/efl/ipc/: channel_broker.h  command_pipe.h  pipe_writer.h
engine/include/efl/registries/: area_registry.h  calendar_registry.h  crafting_registry.h  dialogue_service.h  npc_registry.h  quest_registry.h  resource_registry.h  story_bridge.h  warp_service.h  world_npc_registry.h  world_state_service.h
engine/src/: entry.cpp
engine/src/areas/: HijackedRoomBackend.cpp  NativeRoomBackend.cpp
engine/src/bridge/: hooks.cpp  instance_walker.cpp  room_tracker.cpp  routine_invoker.cpp
engine/src/core/: bootstrap.cpp  compatibility_service.cpp  config_service.cpp  diagnostics.cpp  efpack_loader.cpp  event_bus.cpp  hot_reload.cpp  log_service.cpp  manifest.cpp  registry_service.cpp  save_service.cpp  trigger_service.cpp
engine/src/ipc/: channel_broker.cpp  command_pipe.cpp  pipe_writer.cpp
engine/src/registries/: area_registry.cpp  calendar_registry.cpp  crafting_registry.cpp  dialogue_service.cpp  npc_registry.cpp  quest_registry.cpp  resource_registry.cpp  story_bridge.cpp  warp_service.cpp  world_npc_registry.cpp  world_state_service.cpp
engine/tests/: .gitignore  CMakeLists.txt  test_area_registry.cpp  test_build.cpp  test_calendar_registry.cpp  test_channel_broker.cpp  test_compatibility.cpp  test_config_service.cpp  test_crafting_registry.cpp  test_diagnostics.cpp  test_dialogue_service.cpp  test_event_bus.cpp  test_hooks.cpp  test_integration.cpp  test_log_service.cpp  test_manifest.cpp  test_npc_registry.cpp  test_quest_registry.cpp  test_resource_registry.cpp  test_save_service.cpp  test_story_bridge.cpp  test_trigger_service.cpp  test_warp_service.cpp  test_world_npc_registry.cpp  test_world_state.cpp
engine/tests/fixtures/: invalid_manifest.efl  sample_area_native.json  sample_npc.json  sample_quest.json  sample_resource_dungeon_votes.json  valid_manifest.efl
engine/tests/fixtures/invalid_packs/invalid_content_pack/: manifest.efl
engine/tests/fixtures/sample_content_pack/: manifest.efl
engine/tests/fixtures/sample_content_pack/areas/: crystal_cave.json
engine/tests/fixtures/sample_content_pack/triggers/: has_cave_key.json
engine/tests/fixtures/sample_content_pack/warps/: farm_to_cave.json
engine/tests/fixtures/sample_packs/sample_content_pack/: manifest.efl
engine/tests/fixtures/sample_packs/sample_content_pack/dialogue/: flora_intro.json
engine/tests/fixtures/sample_packs/sample_content_pack/events/: crystal_cave_reveal.json
engine/tests/fixtures/sample_packs/sample_content_pack/recipes/: crystal_pickaxe.json
engine/tests/fixtures/sample_packs/sample_content_pack/resources/: mythril_ore.json
engine/tests/fixtures/sample_packs/sample_content_pack/world_npcs/: forest_merchant.json
engine/tests/fixtures/script_hook_packs/hook_test_pack/: manifest.efl
engine/tools/probe_runtime/: CMakeLists.txt  probe_runtime.cpp
examples/hello_adventurer/: manifest.efl
examples/hello_adventurer/areas/: example_room.json
examples/hello_adventurer/calendar/: spring_first_visit.json
examples/hello_adventurer/dialogue/: auri_clone_dialogue.json
examples/hello_adventurer/events/: welcome_event.json
examples/hello_adventurer/npcs/: auri_clone.json
examples/hello_adventurer/triggers/: talked_triggers.json
examples/hello_adventurer/warps/: town_to_example.json
examples/hello_compat/: manifest.efdat
release/devkit/: GETTING_STARTED.txt  INSTALL.txt  SCHEMAS.txt  TUI_USAGE.txt  USAGE.txt
release/player/: INSTALL.txt
schemas/: area.schema.json  dialogue.schema.json  efl-dat.schema.json  efl-manifest.schema.json  event-calendar.schema.json  event.schema.json  ipc-message.schema.json  npc.schema.json  quest.schema.json  recipe.schema.json  resource.schema.json  trigger.schema.json  warp.schema.json  world-npc.schema.json
tui/: Cargo.toml
tui/src/: app.rs  demo.rs  engine_state.rs  ipc.rs  main.rs  state.rs  theme.rs
tui/src/diagnostics/: codes.rs  collector.rs  mod.rs  severity.rs
tui/src/pack/: builder.rs  inspector.rs  mod.rs  shared.rs  validator.rs  watcher.rs
tui/src/phases/: boot.rs  diagnostics.rs  mod.rs  monitor.rs
tui/src/pipe/: discovery.rs  mod.rs  reader.rs
tui/src/tabs/: creation_kit.rs  diagnostics.rs  packs.rs
tui/src/widgets/: card_grid.rs  diagnostic_list.rs  mod.rs  panel.rs  phase_indicator.rs  status_bar.rs
