[package]
name = "efl-tui"
version = "1.0.0-pre.3"
edition = "2021"
description = "TUI loader and monitor for EFL"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Security",
]
