[package]
name = "efl-tui"
version = "1.0.0-pre.3"
edition = "2021"
description = "TUI loader and monitor for EFL"

[[bin]]
name = "efl-tui"
path = "src/main.rs"

[[bin]]
name = "efl-pack"
path = "src/bin/pack.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sha2 = { version = "0.10", features = ["std"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Security",
]
