[package]
name = "efl-devkit"
version = "0.1.0-pre.1"
edition = "2021"
description = "EFL DevKit — desktop GUI for EFL mod authoring"

[[bin]]
name = "efl-devkit"
path = "src/main.rs"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default_fonts"] }
notify = "6"
rfd = "0.14"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sha2 = { version = "0.10", features = ["std"] }
chrono = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
]
